--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -52,6 +52,7 @@
     <Compile Include="StringHandler.cs" />
     <Compile Include="UIHandler.cs" />
     <Compile Include="ValidationHandler.cs" />
+    <Compile Include="XMLHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
