--- a/POE Auxiliary Tools/POE Auxiliary Tools.csproj
+++ b/POE Auxiliary Tools/POE Auxiliary Tools.csproj
@@ -90,6 +90,12 @@
     <Compile Include="基础数据\Frm_物品类别管理.Designer.cs">
       <DependentUpon>Frm_物品类别管理.cs</DependentUpon>
     </Compile>
+    <Compile Include="查询类工具\Frm_查询历史.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="查询类工具\Frm_查询历史.Designer.cs">
+      <DependentUpon>Frm_查询历史.cs</DependentUpon>
+    </Compile>
     <Compile Include="查询类工具\Frm_集市价格查询.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -117,6 +123,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="基础数据\Frm_物品类别管理.resx">
       <DependentUpon>Frm_物品类别管理.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="查询类工具\Frm_查询历史.resx">
+      <DependentUpon>Frm_查询历史.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="查询类工具\Frm_集市价格查询.resx">
       <DependentUpon>Frm_集市价格查询.cs</DependentUpon>
