--- a/POE Auxiliary Tools/POE Auxiliary Tools.csproj
+++ b/POE Auxiliary Tools/POE Auxiliary Tools.csproj
@@ -145,6 +145,12 @@
     <Compile Include="基础数据\Frm_物品类别管理.Designer.cs">
       <DependentUpon>Frm_物品类别管理.cs</DependentUpon>
     </Compile>
+    <Compile Include="查询类工具\Fm_价格缓存.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="查询类工具\Fm_价格缓存.Designer.cs">
+      <DependentUpon>Fm_价格缓存.cs</DependentUpon>
+    </Compile>
     <Compile Include="查询类工具\Frm_价格走势.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -190,6 +196,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="基础数据\Frm_物品类别管理.resx">
       <DependentUpon>Frm_物品类别管理.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="查询类工具\Fm_价格缓存.resx">
+      <DependentUpon>Fm_价格缓存.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="查询类工具\Frm_价格走势.resx">
       <DependentUpon>Frm_价格走势.cs</DependentUpon>
