--- a/POE Auxiliary Tools/POE Auxiliary Tools.csproj
+++ b/POE Auxiliary Tools/POE Auxiliary Tools.csproj
@@ -221,6 +221,12 @@
     <Compile Include="自动化工具\Frm_装备类工具.Designer.cs">
       <DependentUpon>Frm_装备类工具.cs</DependentUpon>
     </Compile>
+    <Compile Include="自动化工具\流放2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="自动化工具\流放2.Designer.cs">
+      <DependentUpon>流放2.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="BaseForm.resx">
       <DependentUpon>BaseForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -279,6 +285,9 @@
     <EmbeddedResource Include="自动化工具\Frm_装备类工具.resx">
       <DependentUpon>Frm_装备类工具.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="自动化工具\流放2.resx">
+      <DependentUpon>流放2.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="AHK Script\一键开门回城.ahk">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
@@ -295,6 +304,12 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="AHK Script\自动吃药.ahk">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="AHK Script\自动吃药2.ahk">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="AHK Script\自动吃藍2.ahk">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="AHK Script\自动洗地图.ahk">
