--- a/POE Auxiliary Tools/packages.config
+++ b/POE Auxiliary Tools/packages.config
@@ -4,4 +4,5 @@
   <package id="Ljs.Core" version="1.2.8524.27409" targetFramework="net48" />
   <package id="Ljs.UI" version="1.1.8517.23712" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
+  <package id="OpenCVSharp" version="2.4.0.1" targetFramework="net48" />
 </packages>
